M3-3-node--facespace: 2.2 - Create the Profile Page

--- a/public/css/components/profile-page.css
+++ b/public/css/components/profile-page.css
@@ -1,5 +1,6 @@
 /* css here */
 .profile-page {
+  /* missing css */
 }
 .profile-page--banner {
   background: url(/images/facespace_bg.jpg) center center;
